<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Playlist Maker</string>

    <!--  APP  -->

    <!--  activity_main  -->
    <string name="am_header">Playlist maker</string>
    <string name="am_search">Search</string>
    <string name="am_media">Media</string>
    <string name="am_settings">Settings</string>

    <!--  activity_settings  -->
    <string name="as_header">Settings</string>
    <string name="as_theme">Dark theme</string>
    <string name="as_share">Share app</string>
    <string name="as_support">Write to support</string>
    <string name="as_agreement">Terms of use</string>
    <string name="as_back">Back</string>

    <!--  intent  -->
    <string name="share_message">https://practicum.yandex.ru/android-developer/</string>
    <string name="share_title">Choose your preferred messenger</string>

    <string name="mail_message">Thanks to the developers for the cool app!</string>
    <string name="mail_header">Message to the developers of the Playlist Maker app</string>
    <string name="mail_uriString">mailto:</string>
    <string name="mail_address">i9373013@yandex.ru</string>
    <string name="mail_title">Choose your preferred mail client</string>

    <string name="tou_url">https://yandex.ru/legal/practicum_offer/</string>

    <!--  activity_search  -->
    <string name="ash_hint">Search</string>
    <string name="ash_description">Delete text</string>
    <string name="iv_description">Error icon</string>
    <string name="btn_update">Update</string>

    <string name="you_searched">Your search history</string>
    <string name="clear_history">Clear history</string>

    <string name="message_nothing_show">Nothing was found</string>
    <string name="message_server_error">An error occurred on the server</string>

    <string name="message_no_connection">Communication problems</string>
    <string name="message_no_connection_desc">The download failed. Check your internet connection</string>

    <string name="message_empty_query">Empty query</string>
    <string name="message_empty_descr">Input text into search field</string>

    <string name="message_app_error">Unknown error</string>
    <string name="message_app_error_descr">Contact the app developer</string>

    <!--  search_view  -->
    <string name="sv_albumPicture">Album picture</string>
    <string name="sv_more">In details</string>

    <!--  track_activity  -->
    <string name="at_empty">            </string>
    <string name="at_track_name">Full track name</string>
    <string name="at_band_name">Band name</string>
    <string name="at_empty_timer" translatable="false">00:00</string>
    <string name="at_duration">Duration</string>
    <string name="at_album">Album</string>
    <string name="at_year">Year</string>
    <string name="at_genre">Genre</string>
    <string name="at_country">Country</string>
    <string name="at_no_data">N/A</string>
    <string name="at_cd_play">Play</string>
    <string name="at_cd_add">Add</string>
    <string name="at_cd_like">Like</string>

</resources>