<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/app_padding20">

    <!--
    android:background="@color/am_white"
    xmlns:tools="http://schemas.android.com/tools"
    -->

    <TextView
        android:id="@+id/tvBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/am_settings"
        style="@style/textStyleColor"
        android:drawablePadding="@dimen/as_drawablePadding28"
        android:textSize="@dimen/as_HeaderText"
        app:drawableStartCompat="@drawable/ic_arrow_back"
        android:fontFamily="@font/ys_display_medium"/>

    <!--android:textColor ="@color/am_textColor"-->

    <FrameLayout
        style="@style/frameLayoutStyleSetting"
        android:layout_marginTop="40dp">
        <TextView
            style="@style/textStyleSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/as_theme" />

        <Switch
            android:id="@+id/swDarkTheme"
            xmlns:tools="http://schemas.android.com/tools"
            style="@style/icoStyleSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvShareApp"
        style="@style/textViewSetting"
        android:text="@string/as_share"
        app:drawableEndCompat="@drawable/ic_share"
        />

    <TextView
        android:id="@+id/tvSupport"
        style="@style/textViewSetting"
        android:text="@string/as_support"
        app:drawableEndCompat="@drawable/ic_support" />

    <TextView
        android:id="@+id/tvTermOfUse"
        style="@style/textViewSetting"
        android:text="@string/as_agreement"
        app:drawableEndCompat="@drawable/ic_arrow_forward" />


</LinearLayout>