<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/am_search"
        style="@style/textStyleColor"
        android:paddingStart="@dimen/ash_pdStart20"
        android:paddingEnd="@dimen/ash_pdEnd20"
        android:paddingTop="@dimen/ash_pdTop"
        android:drawablePadding="@dimen/ash_drawablePadding28"
        android:textSize="@dimen/as_HeaderText"
        app:drawableStartCompat="@drawable/ic_arrow_back"
        android:fontFamily="@font/ys_display_medium"/>

    <FrameLayout
        android:id="@+id/container"
        style="@style/searchFrameStyle">

        <EditText
            android:id="@+id/etSearch"
            style="@style/searchEditTextStyle"
            android:lines="1"
            android:maxLength="30"
            android:hint="@string/ash_hint"
            android:importantForAutofill="no"
            android:background="@drawable/radius_search" />
        <!--android:clipToOutline="true"-->

        <ImageView
            android:id="@+id/ivClearText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center|end"
            android:src="@drawable/ic_delete_txt"
            android:visibility="invisible"
            android:background="@color/as_backgroundSearch"
            android:paddingEnd="@dimen/ash_paddingEndStart"
            android:paddingStart="@dimen/ash_paddingEndStart"
            android:contentDescription="@string/ash_description"/>

    </FrameLayout >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDataTracks"
        android:layout_marginTop="@dimen/rv_marginTop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
</LinearLayout>